[gd_scene load_steps=31 format=3 uid="uid://dr3c2tass2215"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_fx7k3"]
[ext_resource type="PackedScene" uid="uid://81ppawwqd8qt" path="res://scenes/component/random_stream_player_component.tscn" id="2_6jxot"]
[ext_resource type="AudioStream" uid="uid://dgim5v2efqw04" path="res://assets/audio/switch/switch1.ogg" id="3_y05k6"]
[ext_resource type="AudioStream" uid="uid://c848frvg8ebsc" path="res://assets/audio/switch/switch2.ogg" id="4_o1aif"]
[ext_resource type="AudioStream" uid="uid://bx8wtfb2ydesw" path="res://assets/audio/switch/switch3.ogg" id="5_hyk6t"]
[ext_resource type="AudioStream" uid="uid://bqvkf4kogpq4o" path="res://assets/audio/switch/switch4.ogg" id="6_4wt1w"]
[ext_resource type="AudioStream" uid="uid://bxotf73f2n3x0" path="res://assets/audio/switch/switch10.ogg" id="7_i23bc"]
[ext_resource type="AudioStream" uid="uid://bhu0qknwj1i83" path="res://assets/audio/switch/switch11.ogg" id="8_jlkdg"]
[ext_resource type="AudioStream" uid="uid://d0pfajl8ehapr" path="res://assets/audio/switch/switch12.ogg" id="9_ktqna"]
[ext_resource type="AudioStream" uid="uid://b12738g20eln0" path="res://assets/audio/switch/switch13.ogg" id="10_fgy5o"]
[ext_resource type="AudioStream" uid="uid://biyh0iiv45xni" path="res://assets/audio/switch/switch14.ogg" id="11_w64m4"]
[ext_resource type="AudioStream" uid="uid://cd4xj4cj06mon" path="res://assets/audio/switch/switch15.ogg" id="12_xcwd2"]
[ext_resource type="AudioStream" uid="uid://damofj204otpv" path="res://assets/audio/switch/switch16.ogg" id="13_eexlc"]
[ext_resource type="AudioStream" uid="uid://dkk60jd0yr7iu" path="res://assets/audio/switch/switch17.ogg" id="14_js8re"]
[ext_resource type="AudioStream" uid="uid://dw81x8ppc3l83" path="res://assets/audio/switch/switch18.ogg" id="15_gvpyo"]
[ext_resource type="AudioStream" uid="uid://yl76l01mys6m" path="res://assets/audio/switch/switch19.ogg" id="16_i51mg"]
[ext_resource type="AudioStream" uid="uid://dhbjqpu5o8xrm" path="res://assets/audio/switch/switch20.ogg" id="17_dym3j"]
[ext_resource type="AudioStream" uid="uid://8g1o0mmabbo8" path="res://assets/audio/switch/switch21.ogg" id="18_bv7q2"]
[ext_resource type="AudioStream" uid="uid://d2f6w3sc4gael" path="res://assets/audio/switch/switch22.ogg" id="19_q4tqe"]
[ext_resource type="AudioStream" uid="uid://bmb78fq705t6o" path="res://assets/audio/switch/switch23.ogg" id="20_ff1ol"]
[ext_resource type="AudioStream" uid="uid://bqc1o0ojbv2ek" path="res://assets/audio/switch/switch24.ogg" id="21_ywiyf"]
[ext_resource type="AudioStream" uid="uid://36c3wdp0b6sv" path="res://assets/audio/switch/switch25.ogg" id="22_2cqet"]

[sub_resource type="Animation" id="Animation_15w3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ClickPlayerComponent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="Animation" id="Animation_ly0ql"]
resource_name = "discard"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_axgee"]
resource_name = "in"
length = 0.4
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 0.406126, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1e-05, 1e-05), Vector2(1.15, 1.15), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_40e3a"]
resource_name = "selected"
length = 0.4
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.399),
"transitions": PackedFloat32Array(1, 3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.049, 0.201, 0.398),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.174533, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lelja"]
_data = {
"RESET": SubResource("Animation_15w3q"),
"discard": SubResource("Animation_ly0ql"),
"in": SubResource("Animation_axgee"),
"selected": SubResource("Animation_40e3a")
}

[sub_resource type="Animation" id="Animation_fby86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_v5g7e"]
resource_name = "hover"
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wio1a"]
_data = {
"RESET": SubResource("Animation_fby86"),
"hover": SubResource("Animation_v5g7e")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(150, 150)
offset_right = 150.0
offset_bottom = 150.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_fx7k3")

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_6jxot")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("3_y05k6"), ExtResource("4_o1aif"), ExtResource("5_hyk6t"), ExtResource("6_4wt1w"), ExtResource("7_i23bc"), ExtResource("7_i23bc"), ExtResource("8_jlkdg"), ExtResource("9_ktqna"), ExtResource("10_fgy5o"), ExtResource("11_w64m4"), ExtResource("12_xcwd2"), ExtResource("13_eexlc"), ExtResource("14_js8re"), ExtResource("15_gvpyo"), ExtResource("16_i51mg"), ExtResource("17_dym3j"), ExtResource("18_bv7q2"), ExtResource("19_q4tqe"), ExtResource("20_ff1ol"), ExtResource("21_ywiyf"), ExtResource("22_2cqet")])

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_6jxot")]
streams = Array[AudioStream]([ExtResource("3_y05k6"), ExtResource("4_o1aif"), ExtResource("5_hyk6t"), ExtResource("6_4wt1w"), ExtResource("7_i23bc"), ExtResource("8_jlkdg"), ExtResource("9_ktqna"), ExtResource("10_fgy5o"), ExtResource("11_w64m4"), ExtResource("12_xcwd2"), ExtResource("13_eexlc"), ExtResource("14_js8re"), ExtResource("15_gvpyo"), ExtResource("16_i51mg"), ExtResource("17_dym3j"), ExtResource("18_bv7q2"), ExtResource("19_q4tqe"), ExtResource("20_ff1ol"), ExtResource("21_ywiyf"), ExtResource("22_2cqet")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lelja")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wio1a")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.239216, 0.141176, 0.188235, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Test Label"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.239216, 0.141176, 0.188235, 1)
theme_override_constants/outline_size = 10
text = "Write a description here maybe even a long description ."
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
